media/gpu/v4l2vda: fix reset handling in ImportBufferForPictureTask()

ImportBufferForPictureTask() creates the image processor when handling
the first buffer. On doing so, it DCHECK()s that we are in the
kAwaitingPictureBuffers state.

However, right before this check we are potentially calling
FinishReset(), which may change the state to kReset and make this
DCHECK() fail.

Fix this by moving the FinishReset() to after we create the image
processor instance. While at it, move the DCHECK() to the beginning of
the block.

BUG=891599
Test=Checked the VDA unittest was passing on Hana in import mode

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I35d2aa134209b5bd8061e5be6df3e78d88fcb5fd
Reviewed-on: https://chromium-review.googlesource.com/c/1257790
Reviewed-by: Pawel Osciak <posciak@chromium.org>
Reviewed-by: Hirokazu Honda <hiroh@chromium.org>
Commit-Queue: Alexandre Courbot <acourbot@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598667}
Former-commit-id: 15bc312282ebebc831752c530b1b661baf66c6b5